2005-02-11  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_6540.xml: Updated autodetection info
	  (MDK bug #13466).

	* printer/Minolta-magicolor_2430_DL.xml, driver/foo2zjs.xml,
	  opt/foo2zjs-PrinterType.xml, opt/foo2zjs-InputSlot.xml,
	  opt/foo2zjs-ICM.xml: Added the Minolta magicolor 2430 DL.

2005-02-10  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/pxl1010.xml, opt/2.xml, opt/PCL-XL-InputSlot.xml: Added
	  "pxl1010" driver entry for the HP LaserJet 1010/1012. It adds
	  a special 8-byte sequence to the output of "pxlmono", so that
	  the printers finally work without "Unsupported personality: PCL".

	* driver/ljet4.xml, driver/lj4dith.xml: Removed HP LaserJet
	  1010/1012.

	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1010.xml,
	  printer/HP-LaserJet_1010.xml: Updated texts, ratings, and
	  recommended drivers.

2005-02-10  Tim Waugh <twaugh@redhat.com>

	* printer/HP-Color_LaserJet_4600.xml: Added IEEE 1284 information (RH
	  bug #147648).

2005-02-08  Tim Waugh <twaugh@redhat.com>

	* printer/HP-DeskJet_6540.xml: Corrected IEEE 1284 information (RH
	  bug #147288).

	* printer/Epson-Stylus_C82.xml: Added IEEE 1284 information (RH
	  bug #147230).

2005-01-24  Tim Waugh <twaugh@redhat.com>

	* printer/HP-DeskJet_880C.xml: Added IEEE 1284 information (RH
	  bug #145926).

2005-01-21  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gdi.xml, driver/hl1250.xml, driver/pcl3.xml: Added
	  instructions and links to add these drivers to GhostScript 8.x.

	* driver/pcl3.xml: Updated driver home page URL.

2005-01-15  Chris Lawrence  <lawrencc@debian.org>

	* db/source/printer/Brother-HL-1430.xml,
	  db/source/printer/Brother-HL-1440.xml,
	  db/source/printer/Canon-BJC-250.xml,
	  db/source/printer/Canon-S100.xml,
	  db/source/printer/Epson-Stylus_C60.xml,
	  db/source/printer/HP-DeskJet_1220C.xml,
	  db/source/printer/HP-DeskJet_3320.xml,
	  db/source/printer/HP-DeskJet_3550.xml,
	  db/source/printer/HP-DeskJet_5652.xml,