@@ -26,15 +26,16 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality>
+  <functionality>D</functionality>
   <driver>gimp-print</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
 
-    This printer is not yet supported by Gimp-Print, but support for
-    it is under development, but it will most probably take a longer
-    time until this device is really supported.&lt;p&gt;
+    This printer is currently only partially supported by the latest
+    5.x Gimp-Print/Gutenprint, but full support for it is under
+    development. It will most probably take a longer time until this
+    device is perfectly supported.&lt;p&gt;
 
     This printer has is an 8-color (CMYK + red + blue + "gloss
     enhancer", with two different black inks installed) printer with
