@@ -1,3 +1,7 @@
+2005-02-15  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Epson-Stylus_Photo_R800.xml: Updated rating and text.
+
 2005-02-11  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-DeskJet_6540.xml: Updated autodetection info
